# stock-trading-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: daily-tasks.yml  model-training.yml  python-app.yml  python-tests.yml  test.yml
data/: financial_indicators.csv  news_sentiment.json  stock_prices.csv
docs/data/: preprocessing.md
docs/deployment/: production.md
docs/model/: architecture.md
docs/trading/: strategy.md
src/: __init__.py
src/dashboard/: real_time_dashboard.py  stock_dashboard.py
src/data/: data_loader.py  pipeline.py  stock_data_loader.py
src/models/: __init__.py  base_model.py  lstm_model.py  meta_learner.py  model_optimizer.py  model_validator.py  trading_model.py
tests/: conftest.py  test_data_loader.py  test_meta_learner.py  test_optimizer.py  test_trading_model.py
